<resources>
    <string name="app_name">Inventory App Cereals Stage 2</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="action_delete">Delete</string>
    <string name="product">Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="partner">Partner</string>
    <string name="name_partner">Name Partner</string>
    <string name="partner_contact">Partner Contact</string>
    <string name="insert_product">Insert Product</string>
    <string name="delete_all_product">Delete all Product</string>
    <string name="action_save">action_save</string>
    <string name="euro">€</string>
    <string name="empty_view_title_text">The warehouse is empty</string>
    <string name="empty_view_subtitle_text">add product</string>
    <string name="unknown_product">No product</string>
    <string name="unknown_breed">no product</string>
    <string name="no_name">no name</string>
    <string name="title_new_cereals">new product</string>
    <string name="editor_insert_product_failed">insert failed</string>
    <string name="editor_insert_product_successful">insert successful</string>
    <string name="editor_update_product_failed">update product failed</string>
    <string name="editor_update_product_successful">udate product succesfull</string>
    <string name="unsaved_changes_dialog_msg">Do you want finish the update?</string>
    <string name="discard">no</string>
    <string name="keep_editing">continue editing</string>
    <string name="delete_dialog_msg">Do you want delete this product?</string>
    <string name="delete">yes</string>
    <string name="cancel">no</string>
    <string name="editor_delete_product_failed">deleted failed</string>
    <string name="editor_delete_product_successful">delete successful</string>
    <string name="label_qli">qli</string>
    <string name="quntity_empty">quantity field cannot be empty</string>
    <string name="quntity0">quntity cannot be less than zero</string>
    <string name="empty_field">All field should  be compiled </string>
</resources>

